--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@ button {
   </header>
 <ul id="categoryList">
   <li onclick="filterCategory('Home')">Home</li>
+  <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li>
 </ul>
+
 
 </div>
 
