--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Chromebook Unlocked Games</title>
 <link rel="icon" type="image/png" href="assets/logo.png">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1033412505744705" crossorigin="anonymous"></script>
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
@@ -14,6 +15,7 @@
   --thumb-height: clamp(100px, 20vh, 160px);
   --sidebar-width: clamp(50px, 6vw, 70px);
 }
+
 * { box-sizing: border-box; }
 html, body {
   margin: 0;
@@ -104,8 +106,6 @@ button {
   background: transparent;
   border-radius: 10px;
   overflow: hidden;
-  transform: scale(1);
-  transform-origin: top center;
 }
 .viewer::before {
   content: "";
@@ -114,8 +114,7 @@ button {
 }
 .viewer iframe {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 100%;
   border: none;
@@ -246,6 +245,7 @@ button {
     <button id="fullscreenBtn" onclick="toggleFullscreen()">⛶ Fullscreen</button>
   </div>
 
+  <!-- Game Viewer -->
   <div class="viewer" id="viewer">
     <div id="startOverlay">
       <img id="startThumb" src="" alt="Game Thumbnail">
@@ -255,15 +255,15 @@ button {
     <iframe id="gameFrame" src=""></iframe>
   </div>
 
-  <!-- Recently Played -->
+  <!-- Recently Played (Home Section Only) -->
   <div class="category" data-category="Recently Played" id="recentlyPlayedSection" style="display:none;">
     <h2>Recently Played</h2>
     <div class="grid" id="recentlyPlayedGrid"></div>
   </div>
 
-  <!-- Home -->
-  <div class="category" data-category="Home">
-    <h2>Home</h2>
+  <!-- All Games (Home) -->
+  <div class="category" data-category="Home" id="homeSection">
+    <h2>All Games</h2>
     <div class="grid">
       
           <div class="card" onclick="prepareGame('1v1.lol', '1v1.lol', 'games/1v1.lol/thumbnail.png')">
@@ -389,8 +389,8 @@ let currentGameFolder = null;
 const MAX_RECENT = 12;
 
 function gameExists(folder) {
-  const xhr = new XMLHttpRequest();
   try {
+    const xhr = new XMLHttpRequest();
     xhr.open('HEAD', 'games/' + folder + '/index.html', false);
     xhr.send();
     return xhr.status !== 404;
@@ -420,13 +420,23 @@ function updateRecentlyPlayedUI(list) {
   recentlyPlayedGrid.innerHTML = '';
   if (!list.length) return document.getElementById('recentlyPlayedSection').style.display = 'none';
   document.getElementById('recentlyPlayedSection').style.display = 'block';
-  list.forEach(g => {
+  const displayList = list.slice(0, 5);
+  displayList.forEach(g => {
     const card = document.createElement('div');
     card.className = 'card';
     card.onclick = () => prepareGame(encodeURIComponent(g.folder), encodeURIComponent(g.name), g.thumb);
     card.innerHTML = `<img class="thumb" src="${g.thumb}" alt="${g.name}"><div>${g.name}</div>`;
     recentlyPlayedGrid.appendChild(card);
   });
+
+  // Add "⋯" card at the end
+  if (list.length > 5) {
+    const moreCard = document.createElement('div');
+    moreCard.className = 'card more';
+    moreCard.textContent = '⋯';
+    moreCard.onclick = () => filterCategory('Recently Played');
+    recentlyPlayedGrid.appendChild(moreCard);
+  }
 }
 
 function prepareGame(folderEncoded, nameEncoded, thumbSrc) {
@@ -470,15 +480,19 @@ function toggleFullscreen() {
 }
 
 function filterCategory(cat) {
-  const categories = document.querySelectorAll('.category');
-  categories.forEach(c => {
+  const cats = document.querySelectorAll('.category');
+  cats.forEach(c => {
     const current = c.getAttribute('data-category');
     if (cat === 'Home') {
-      c.style.display = 'block';
       document.getElementById('recentlyPlayedSection').style.display =
         recentlyPlayedGrid.children.length ? 'block' : 'none';
+      document.getElementById('homeSection').style.display = 'block';
+      if (current !== 'Home' && current !== 'Recently Played')
+        c.style.display = 'none';
     } else {
-      c.style.display = current === cat ? 'block' : 'none';
+      c.style.display = (current === cat) ? 'block' : 'none';
+      if (current === 'Recently Played') document.getElementById('recentlyPlayedSection').style.display = 'none';
+      if (current === 'Home') document.getElementById('homeSection').style.display = 'none';
     }
   });
   document.getElementById('content').scrollTop = 0;
