--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@ button { padding: 0.4rem 0.8rem; border: none; border-radius: 6px; cursor: point
   font-size: 2rem; color: #ffccff;
 }
 
+/* Back to home */
+#recentBackBtn {
+  display: none;
+  background: #ff99ff;
+  color: black;
+  border: none;
+  border-radius: 6px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar { width: 8px; }
 ::-webkit-scrollbar-thumb { background: #660099; border-radius: 4px; }
@@ -131,6 +143,7 @@ button { padding: 0.4rem 0.8rem; border: none; border-radius: 6px; cursor: point
   <header><img src="assets/logo.png" alt="Logo"></header>
   <ul id="categoryList">
     <li onclick="filterCategory('Home')">Home</li>
+    <li onclick="filterCategory('Recently Played')">Recently Played</li>
     <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li>
   </ul>
 </div>
@@ -154,6 +167,7 @@ button { padding: 0.4rem 0.8rem; border: none; border-radius: 6px; cursor: point
   <!-- Recently Played -->
   <div class="category" data-category="Recently Played" id="recentlyPlayedSection" style="display:none;">
     <h2>Recently Played</h2>
+    <button id="recentBackBtn" onclick="backToHome()">← Back to Home</button>
     <div class="grid" id="recentlyPlayedGrid"></div>
   </div>
 
@@ -256,6 +270,7 @@ const startOverlay = document.getElementById('startOverlay');
 const startThumb = document.getElementById('startThumb');
 const startName = document.getElementById('startName');
 const recentlyPlayedGrid = document.getElementById('recentlyPlayedGrid');
+const recentBackBtn = document.getElementById('recentBackBtn');
 let currentGameFolder = null;
 const MAX_RECENT = 25;
 
@@ -274,7 +289,7 @@ function loadRecentlyPlayed() {
   let list = JSON.parse(localStorage.getItem('recentlyPlayed') || '[]');
   list = list.filter(g => gameExists(g.folder));
   localStorage.setItem('recentlyPlayed', JSON.stringify(list));
-  updateRecentlyPlayedUI(list);
+  updateRecentlyPlayedUI(list, false);
 }
 
 function saveRecentlyPlayed(game) {
@@ -284,25 +299,46 @@ function saveRecentlyPlayed(game) {
   if (list.length > MAX_RECENT) list = list.slice(0, MAX_RECENT);
   list = list.filter(g => gameExists(g.folder));
   localStorage.setItem('recentlyPlayed', JSON.stringify(list));
-  updateRecentlyPlayedUI(list);
+  updateRecentlyPlayedUI(list, false);
 }
 
-function updateRecentlyPlayedUI(list) {
+function updateRecentlyPlayedUI(list, full) {
   recentlyPlayedGrid.innerHTML = '';
   if (!list.length) { document.getElementById('recentlyPlayedSection').style.display = 'none'; return; }
   document.getElementById('recentlyPlayedSection').style.display = 'block';
-  list.slice(0, 7).forEach(g => {
+
+  const displayList = full ? list : list.slice(0, 7);
+  displayList.forEach(g => {
     const c = document.createElement('div');
     c.className = 'card';
     c.onclick = () => prepareGame(encodeURIComponent(g.folder), encodeURIComponent(g.name), g.thumb);
     c.innerHTML = `<img class="thumb" src="${g.thumb}" alt="${g.name}"><div>${g.name}</div>`;
     recentlyPlayedGrid.appendChild(c);
   });
-  const more = document.createElement('div');
-  more.className = 'card more';
-  more.textContent = '⋯';
-  more.onclick = () => filterCategory('Recently Played');
-  recentlyPlayedGrid.appendChild(more);
+
+  if (!full && list.length > 7) {
+    const more = document.createElement('div');
+    more.className = 'card more';
+    more.textContent = '⋯';
+    more.onclick = () => openFullRecentlyPlayed();
+    recentlyPlayedGrid.appendChild(more);
+  }
+}
+
+function openFullRecentlyPlayed() {
+  window.location.hash = '#/recently-played';
+  const list = JSON.parse(localStorage.getItem('recentlyPlayed') || '[]');
+  updateRecentlyPlayedUI(list, true);
+  recentBackBtn.style.display = 'inline-block';
+  document.querySelectorAll('.category').forEach(c => {
+    c.style.display = c.getAttribute('data-category') === 'Recently Played' ? 'block' : 'none';
+  });
+}
+
+function backToHome() {
+  window.location.hash = '';
+  recentBackBtn.style.display = 'none';
+  filterCategory('Home');
 }
 
 function prepareGame(folderEncoded, nameEncoded, thumb) {
@@ -348,8 +384,10 @@ function filterCategory(cat) {
     const category = c.getAttribute('data-category');
     if (cat === 'Home') {
       c.style.display = (category === 'Home' || category === 'Recently Played') ? 'block' : 'none';
+      recentBackBtn.style.display = 'none';
     } else {
       c.style.display = category === cat ? 'block' : 'none';
+      recentBackBtn.style.display = cat === 'Recently Played' ? 'inline-block' : 'none';
     }
   });
   document.getElementById('content').scrollTop = 0;
@@ -361,6 +399,8 @@ function checkHashGame() {
     const folder = decodeURIComponent(hash.split('#/game/')[1]);
     const game = JSON.parse(localStorage.getItem('recentlyPlayed') || '[]').find(g => g.folder === folder);
     if (game && gameExists(folder)) prepareGame(encodeURIComponent(game.folder), encodeURIComponent(game.name), game.thumb);
+  } else if (hash === '#/recently-played') {
+    openFullRecentlyPlayed();
   }
 }
 
