deploy: bd1a9446d701d68839e7107487cae24a40c02ab7

--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@ button {
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
     </div>
+    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.png')">
+      <img class="thumb" src="games/Bad Parenting/thumbnail.png" alt="Bad Parenting">
+      <div>Bad Parenting</div>
+    </div>
     <div class="card" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
       <div>Bad Piggies</div>
@@ -329,6 +333,10 @@ button {
     <div class="card" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.png')">
+      <img class="thumb" src="games/Bad Parenting/thumbnail.png" alt="Bad Parenting">
+      <div>Bad Parenting</div>
     </div>
     <div class="card" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
