deploy: d6002f68737a8eb02cd930f50d14431fb9cec2a9

--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@ button {
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
     </div>
+    <div class="card" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.png')">
+      <img class="thumb" src="games/Bitlife/thumbnail.png" alt="Bitlife">
+      <div>Bitlife</div>
+    </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
       <div>Blackjack</div>
@@ -349,6 +353,10 @@ button {
     <div class="card" onclick="prepareGame('Baldi%E2%80%99s%20Basics','Baldi%E2%80%99s%20Basics','games/Baldi’s Basics/thumbnail.png')">
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.png')">
+      <img class="thumb" src="games/Bitlife/thumbnail.png" alt="Bitlife">
+      <div>Bitlife</div>
     </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
