--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@ button {
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
     </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
+      <div>Bob The Robber 2</div>
+    </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
       <div>Bob The Robber</div>
@@ -369,6 +373,10 @@ button {
     <div class="card" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
+      <div>Bob The Robber 2</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
