--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@ button {
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
     </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 5/thumbnail.png" alt="Bob The Robber 5">
+      <div>Bob The Robber 5</div>
+    </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
       <div>Bob The Robber</div>
@@ -377,6 +381,10 @@ button {
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 5/thumbnail.png" alt="Bob The Robber 5">
+      <div>Bob The Robber 5</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
