deploy: 584c3baecab8c46384afded4e1c7467097a4def1

--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@ button {
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
       <div>Bob The Robber</div>
     </div>
+    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
+      <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
+      <div>Bouncemasters</div>
+    </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
       <div>Burrito Bison Launcha Libre</div>
@@ -389,6 +393,10 @@ button {
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
       <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
       <div>Bob The Robber</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
+      <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
+      <div>Bouncemasters</div>
     </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
