--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@ button {
       <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
       <div>Bouncemasters</div>
     </div>
+    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
+      <img class="thumb" src="games/Bouncy Motors/thumbnail.png" alt="Bouncy Motors">
+      <div>Bouncy Motors</div>
+    </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
       <div>Burrito Bison Launcha Libre</div>
@@ -397,6 +401,10 @@ button {
     <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
       <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
       <div>Bouncemasters</div>
+    </div>
+    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
+      <img class="thumb" src="games/Bouncy Motors/thumbnail.png" alt="Bouncy Motors">
+      <div>Bouncy Motors</div>
     </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
