deploy: 98241c18d3aca7d362f5902daeca79805de5cf32

--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@ button {
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
       <div>Age Of War</div>
     </div>
+    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.png')">
+      <img class="thumb" src="games/BTD5/thumbnail.png" alt="BTD5">
+      <div>BTD5</div>
+    </div>
     <div class="card" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
@@ -353,6 +357,10 @@ button {
     <div class="card" onclick="prepareGame('Age%20Of%20War','Age%20Of%20War','games/Age Of War/thumbnail.png')">
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
       <div>Age Of War</div>
+    </div>
+    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.png')">
+      <img class="thumb" src="games/BTD5/thumbnail.png" alt="BTD5">
+      <div>BTD5</div>
     </div>
     <div class="card" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
