deploy: 1a24b90769aa0ff48e84938725744d15ddcd3798

--- a/index.html
+++ b/index.html
@@ -331,6 +331,10 @@ button {
       <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker">
       <div>Capybara Clicker</div>
     </div>
+    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
+      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
+      <div>Chesire in a Chatroom</div>
+    </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
       <div>The Binding of Isaac - Wrath of the Lamb</div>
@@ -421,6 +425,10 @@ button {
     <div class="card" onclick="prepareGame('Capybara%20Clicker','Capybara%20Clicker','games/Capybara Clicker/thumbnail.png')">
       <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker">
       <div>Capybara Clicker</div>
+    </div>
+    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
+      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
+      <div>Chesire in a Chatroom</div>
     </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
