--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ button {
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
     </div>
+    <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
+      <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
+      <div>Cookie Clicker</div>
+    </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
       <div>The Binding of Isaac - Wrath of the Lamb</div>
@@ -437,6 +441,10 @@ button {
     <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
+    </div>
+    <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
+      <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
+      <div>Cookie Clicker</div>
     </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
