deploy: 6131566354821c52685dd6686a3e9abf3055fbca

--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ button {
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
+      <div>Clear Vision</div>
+    </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
@@ -441,6 +445,10 @@ button {
     <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
+    </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
+      <div>Clear Vision</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
