--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ button {
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
+      <div>Clear Vision 2</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
@@ -445,6 +449,10 @@ button {
     <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
+    </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
+      <div>Clear Vision 2</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
