--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@ button {
       <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
+      <div>Clear Vision 3</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
@@ -453,6 +457,10 @@ button {
     <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
+    </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
+      <div>Clear Vision 3</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
