deploy: d19a298a80ee56f6f275de97577274067bb67c45

--- a/index.html
+++ b/index.html
@@ -347,6 +347,10 @@ button {
       <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
       <div>Clear Vision 3</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
+      <div>Clear Vision 4</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
@@ -461,6 +465,10 @@ button {
     <div class="card" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
       <div>Clear Vision 3</div>
+    </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
+      <div>Clear Vision 4</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
