--- a/index.html
+++ b/index.html
@@ -351,6 +351,10 @@ button {
       <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
       <div>Clear Vision 4</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
+      <div>Clear Vision 5</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
@@ -469,6 +473,10 @@ button {
     <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
       <div>Clear Vision 4</div>
+    </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
+      <div>Clear Vision 5</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
