--- a/index.html
+++ b/index.html
@@ -359,6 +359,10 @@ button {
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
     </div>
+    <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
+      <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
+      <div>Coffie Maker</div>
+    </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
@@ -481,6 +485,10 @@ button {
     <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
+    </div>
+    <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
+      <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
+      <div>Coffie Maker</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
