--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@ button {
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
     </div>
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
+      <div>Color Brust 3D</div>
+    </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
@@ -489,6 +493,10 @@ button {
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
+    </div>
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
+      <div>Color Brust 3D</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
