--- a/index.html
+++ b/index.html
@@ -367,6 +367,10 @@ button {
       <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
+    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
+      <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
+      <div>Color Match</div>
+    </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
@@ -497,6 +501,10 @@ button {
     <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
       <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
+    </div>
+    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
+      <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
+      <div>Color Match</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
