--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ button {
       <img class="thumb" src="games/Crank It!/thumbnail.png" alt="Crank It!">
       <div>Crank It!</div>
     </div>
+    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
+      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.png" alt="Crazy Motorcycle">
+      <div>Crazy Motorcycle</div>
+    </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
       <div>The Binding of Isaac - Wrath of the Lamb</div>
@@ -517,6 +521,10 @@ button {
     <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.png')">
       <img class="thumb" src="games/Crank It!/thumbnail.png" alt="Crank It!">
       <div>Crank It!</div>
+    </div>
+    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
+      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.png" alt="Crazy Motorcycle">
+      <div>Crazy Motorcycle</div>
     </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
