--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@ button {
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
       <div>Age Of War</div>
     </div>
-    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.png')">
-      <img class="thumb" src="games/BTD5/thumbnail.png" alt="BTD5">
+    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.jpg')">
+      <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5">
       <div>BTD5</div>
     </div>
     <div class="card" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
@@ -410,8 +410,8 @@ button {
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
       <div>Age Of War</div>
     </div>
-    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.png')">
-      <img class="thumb" src="games/BTD5/thumbnail.png" alt="BTD5">
+    <div class="card" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.jpg')">
+      <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5">
       <div>BTD5</div>
     </div>
     <div class="card" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
