deploy: 5efa45e44d6da609daa778bcbd98777276f09d2a

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@ button {
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
     </div>
-    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.png')">
-      <img class="thumb" src="games/Bad Parenting/thumbnail.png" alt="Bad Parenting">
+    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.jpg')">
+      <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
       <div>Bad Parenting</div>
     </div>
     <div class="card" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
@@ -418,8 +418,8 @@ button {
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
     </div>
-    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.png')">
-      <img class="thumb" src="games/Bad Parenting/thumbnail.png" alt="Bad Parenting">
+    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.jpg')">
+      <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
       <div>Bad Parenting</div>
     </div>
     <div class="card" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
