--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@ button {
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
@@ -446,8 +446,8 @@ button {
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber 2/thumbnail.png" alt="Bob The Robber 2">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
