deploy: 3108e61a30d316d2fb9aa78fd3d4abe131ab4599

--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@ button {
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber/thumbnail.jpg" alt="Bob The Robber">
       <div>Bob The Robber</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
@@ -454,8 +454,8 @@ button {
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber/thumbnail.jpg" alt="Bob The Robber">
       <div>Bob The Robber</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
