deploy: c0c76b943d3ba9b375ee2ad8163b75bb74342b49

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ button {
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
-      <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 5/thumbnail.png" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.jpg')">
@@ -450,8 +450,8 @@ button {
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
     </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
-      <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.png')">
+      <img class="thumb" src="games/Bob The Robber 5/thumbnail.png" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
     </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.jpg')">
