deploy: 962b0152bcd7a169803173d80cd1577d33bd1093

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ button {
       <img class="thumb" src="games/Bob The Robber/thumbnail.jpg" alt="Bob The Robber">
       <div>Bob The Robber</div>
     </div>
-    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
-      <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
+    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
+      <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
       <div>Bouncemasters</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
@@ -458,8 +458,8 @@ button {
       <img class="thumb" src="games/Bob The Robber/thumbnail.jpg" alt="Bob The Robber">
       <div>Bob The Robber</div>
     </div>
-    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.png')">
-      <img class="thumb" src="games/Bouncemasters/thumbnail.png" alt="Bouncemasters">
+    <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
+      <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
       <div>Bouncemasters</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
