deploy: 26711324e3c3fb7a021ce98128955e9e4aae55b7

--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@ button {
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
       <div>Bouncemasters</div>
     </div>
-    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
-      <img class="thumb" src="games/Bouncy Motors/thumbnail.png" alt="Bouncy Motors">
+    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
+      <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors">
       <div>Bouncy Motors</div>
     </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
@@ -462,8 +462,8 @@ button {
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
       <div>Bouncemasters</div>
     </div>
-    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.png')">
-      <img class="thumb" src="games/Bouncy Motors/thumbnail.png" alt="Bouncy Motors">
+    <div class="card" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
+      <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors">
       <div>Bouncy Motors</div>
     </div>
     <div class="card" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
