deploy: 5d746221d32a9ad5af4a0b62614789b9958afb6e

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@ button {
       <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker">
       <div>Capybara Clicker</div>
     </div>
-    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
-      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
+    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.jpg')">
+      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
       <div>Chesire in a Chatroom</div>
     </div>
     <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
@@ -474,8 +474,8 @@ button {
       <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker">
       <div>Capybara Clicker</div>
     </div>
-    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
-      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
+    <div class="card" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.jpg')">
+      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
       <div>Chesire in a Chatroom</div>
     </div>
     <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
