--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ button {
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
+    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
@@ -482,8 +482,8 @@ button {
       <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
       <div>Chess</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision 2/thumbnail.png" alt="Clear Vision 2">
+    <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
