deploy: d14de4316d8ab475dc643fbff24e6ab23fa9efd2

--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ button {
       <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
       <div>Clear Vision 3</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
+    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4">
       <div>Clear Vision 4</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
@@ -490,8 +490,8 @@ button {
       <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
       <div>Clear Vision 3</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision 4/thumbnail.png" alt="Clear Vision 4">
+    <div class="card" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4">
       <div>Clear Vision 4</div>
     </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
