--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ button {
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
     </div>
-    <div class="card" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.png')">
-      <img class="thumb" src="games/Bitlife/thumbnail.png" alt="Bitlife">
-      <div>Bitlife</div>
+    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
+      <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
+      <div>Bit Planes</div>
     </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
@@ -434,9 +434,9 @@ button {
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
     </div>
-    <div class="card" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.png')">
-      <img class="thumb" src="games/Bitlife/thumbnail.png" alt="Bitlife">
-      <div>Bitlife</div>
+    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
+      <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
+      <div>Bit Planes</div>
     </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
