deploy: 30cceba4ed5bda278c4e7b0aee29105fab4ef7a2

--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@ button {
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
     </div>
-    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
-      <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
+    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.png')">
+      <img class="thumb" src="games/Bit Planes/thumbnail.png" alt="Bit Planes">
       <div>Bit Planes</div>
     </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
@@ -434,8 +434,8 @@ button {
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
       <div>Baldi’s Basics</div>
     </div>
-    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
-      <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
+    <div class="card" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.png')">
+      <img class="thumb" src="games/Bit Planes/thumbnail.png" alt="Bit Planes">
       <div>Bit Planes</div>
     </div>
     <div class="card" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
