deploy: 6b65484503b3b0cc8557a1120b21c7ef0ed2fb49

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@ button {
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
-      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.jpg')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
     <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
@@ -506,8 +506,8 @@ button {
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
-      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.jpg')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
     <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
