deploy: acb6dadcc1ab220e8696beb7523fb6244b252dd8

--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@ button {
       <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
-      <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
+    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
+      <img class="thumb" src="games/Color Match/thumbnail.jpg" alt="Color Match">
       <div>Color Match</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
@@ -510,8 +510,8 @@ button {
       <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
-      <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
+    <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
+      <img class="thumb" src="games/Color Match/thumbnail.jpg" alt="Color Match">
       <div>Color Match</div>
     </div>
     <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
