deploy: d800b39c4dbe7e05a6d79dc3c37807fc0d88bd1c

--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@ button {
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
     </div>
-    <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.png')">
-      <img class="thumb" src="games/Crank It!/thumbnail.png" alt="Crank It!">
+    <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
+      <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
       <div>Crank It!</div>
     </div>
     <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
@@ -518,8 +518,8 @@ button {
       <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
       <div>Cookie Clicker</div>
     </div>
-    <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.png')">
-      <img class="thumb" src="games/Crank It!/thumbnail.png" alt="Crank It!">
+    <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
+      <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
       <div>Crank It!</div>
     </div>
     <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
